# brlcad-python-bindings

./: .gitignore  README.md  cube_scene.g  gettitle.g  pyproject.toml
brlcad/: Arb8.py  Combination.py  Cone.py  ConstDatabase.py  Database.py  Ellipsoid.py  FileDatabase.py  Handle.py  MemoryDatabase.py  Object.py  Sphere.py  VectorList.py  __init__.py  _bindings.py  database.py  geometry.py
brlcad/docs/: README.md  usage.txt
src/: bindings.py
tests/: test_arb8_creation.py  test_generate_data.py  test_get_title.py
